--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" >
+  <base href="/">
   <title>koa-ang-template</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
