--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,15 @@
 
   <link rel="stylesheet" href="/public/css/styles.css" >
 
-  <script src="/node_modules/angular2/bundles/angular2-polyfills.js"></script>
-  <script src="/node_modules/rxjs/bundles/Rx.umd.js"></script>
-  <script src="/node_modules/angular2/bundles/angular2-all.umd.js"></script>
+
+  <script src="/node_modules/core-js/client/shim.min.js"></script>
+
+
+  <script src="/node_modules/zone.js/dist/zone.js"></script>
+  <script src="/node_modules/reflect-metadata/Reflect.js"></script>
+
+  <script src="/node_modules/rxjs/bundles/Rx.js"></script>
+
 
 </head>
 <body>
